<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_home"
            android:title="@string/site_menu_home" />

        <item
            android:id="@+id/action_categories"
            android:icon="@drawable/ic_addcategory_icon"
            android:title="@string/site_menu_category_list" />

        <item
            android:id="@+id/action_electronics"
            android:icon="@drawable/ic_menu_electronics"
            android:title="@string/electronics"
            android:visible="false"
            />

        <item
            android:id="@+id/action_shoes"
            android:icon="@drawable/ic_menu_shoes"
            android:title="@string/shoes"
            android:visible="false"
            />

        <item
            android:id="@+id/action_clothes"
            android:icon="@drawable/ic_menu_clothes"
            android:title="@string/clothes"
            android:visible="false"
            />
        <item
            android:id="@+id/action_menclothes"
            android:icon="@drawable/ic_menu_men"
            android:title="@string/men_clothes"
            android:visible="false"
            />

        <item
            android:id="@+id/action_womenclothes"
            android:icon="@drawable/ic_menu_women"
            android:title="@string/women_clothes"
            android:visible="false"
            />

        <item
            android:id="@+id/action_childrenclothes"
            android:icon="@drawable/ic_menu_children"
            android:title="@string/children_clothes"
            android:visible="false"
            />

        <item
            android:id="@+id/action_wallets"
            android:icon="@drawable/ic_menu_wallet"
            android:title="@string/wallets"
            android:visible="false"
            />

        <item
            android:id="@+id/action_coats"
            android:icon="@drawable/ic_menu_winter"
            android:title="@string/coats"
            android:visible="false"
            />
        <item
            android:id="@+id/action_football"
            android:icon="@drawable/ic_menu_football"
            android:title="@string/football"
            android:visible="false"
            />

        <item
            android:id="@+id/action_hats"
            android:icon="@drawable/ic_menu_hats"
            android:title="@string/hats"
            android:visible="false"
            />
        <item
            android:id="@+id/action_tools"
            android:icon="@drawable/ic_menu_tools"
            android:title="@string/tools"
            android:visible="false"
            />
        <item
            android:id="@+id/action_animals"
            android:icon="@drawable/ic_menu_animals"
            android:title="@string/animals"
            android:visible="false"
            />

        <item
            android:id="@+id/action_general"
            android:icon="@drawable/ic_menu_general"
            android:title="@string/general"
            android:visible="false"
            />

        <item
            android:id="@+id/action_homeproducts"
            android:icon="@drawable/ic_menu_homeproducts"
            android:title="@string/home_products"
            android:visible="false"
            />


        <item
            android:id="@+id/action_family"
            android:icon="@drawable/ic_menu_family"
            android:title="@string/family"
            android:visible="false"
            />

        <item
            android:id="@+id/action_sunglasses"
            android:icon="@drawable/ic_menu_sunglasses"
            android:title="@string/sunglasses"
            android:visible="false"
            />

        <item
            android:id="@+id/action_watch"
            android:icon="@drawable/ic_menu_watches"
            android:title="@string/watch"
            android:visible="false"
            />

        <item
            android:id="@+id/action_bags"
            android:icon="@drawable/ic_menu_bags"
            android:title="@string/bags"
            android:visible="false"
            />

        <item
            android:id="@+id/action_jewellery"
            android:icon="@drawable/ic_menu_jewellery"
            android:title="@string/jewellery"
            android:visible="false"
            />
        <item
            android:id="@+id/action_tag"
            android:icon="@drawable/ic_menu_tag"
            android:title="@string/tag"
            />
        <item
            android:id="@+id/action_book"
            android:icon="@drawable/ic_book"
            android:title="@string/site_menu_book" />
        <item
            android:id="@+id/action_order"
            android:icon="@drawable/ic_menu_order"
            android:title="@string/site_menu_ordered"
            />


      <!--  <item
            android:id="@+id/action_about_dev"
            android:icon="@drawable/ic_developer"
            android:title="@string/about_dev" /> -->

    </group>

    <item android:title="@string/social">
        <menu>

            <item
                android:id="@+id/action_facebook"
                android:icon="@drawable/ic_facebook"
                android:title="@string/facebook"
                />

            <item
                android:id="@+id/action_israel"
                android:title="@string/facebook1"
                android:visible="false"
                android:icon="@drawable/ic_facebookempty"
                />

            <item
                android:id="@+id/action_digital"
                android:title="@string/fbdigital"
                android:visible="false"
                android:icon="@drawable/ic_facebookempty"
                />

            <item
                android:id="@+id/action_fbfamily"
                android:title="@string/fbfamily"
                android:visible="false"
                android:icon="@drawable/ic_facebookempty"

                />


            <item
                android:id="@+id/action_israelgroup"
                android:title="@string/group"
                android:visible="false"
                android:icon="@drawable/ic_menu_team"
                />

            <item
                android:id="@+id/action_telegram"
                android:title="@string/telegram"
                android:icon="@drawable/ic_menu_telegram"
                android:visible="true"
                />

            <item
                android:id="@+id/action_chat"
                android:title="@string/chat"
                android:icon="@drawable/ic_menu_messenger"
                android:visible="true"
                />


        </menu>
    </item>

    <item android:title="@string/others">
        <menu>
        <!--    <item
                android:id="@+id/privacy_policy"
                android:icon="@drawable/ic_privacy_policy"
                android:title="@string/privacy" />
-->
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />

            <item
                android:id="@+id/action_rate_app"
                android:icon="@drawable/ic_rating"
                android:title="@string/rate" />

        <!--    <item
                android:id="@+id/action_more_app"
                android:icon="@drawable/ic_bag"
                android:title="@string/more_app" />

            <item
                android:id="@+id/action_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit" />
-->
        </menu>
    </item>

</menu>
