<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<android.support.design.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_above="@id/linearLayout"
    android:fitsSystemWindows="true">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_300dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/post_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@color/white"
                app:layout_collapseMode="parallax" />
            <TextView
                android:id="@+id/activity_post_details_custom_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                style="@style/KeysAppearance"
                android:textSize="18sp"
                android:visibility="gone"
                android:text="@string/todo"
                android:layout_marginTop="?attr/actionBarSize"
                android:layout_marginBottom="@dimen/margin_6dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:minLines="2"
                android:fontFamily="@font/libre_franklin"
                tools:text="This is a test text. Please, don't take it seriously!"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:theme="@style/ToolBarStyle">
                <TextView
                    android:id="@+id/activity_post_details_reporting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/fullTransparent"
                    android:textColor="@color/white"
                    android:padding="@dimen/margin_2dp"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:visibility="gone"
                    android:text="@string/report"
                    android:focusable="true" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/share_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_15dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        tools:src="@drawable/ic_book" />

    <Button
        android:id="@+id/tags_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_15dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        android:text="@string/todo"
        android:padding="@dimen/margin_4dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/rectangle_black"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|left|end"
        />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/lyt_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/lyt_secondary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/toolbar_boarder" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_17dp"
                android:layout_marginStart="@dimen/margin_17dp"
                android:layout_marginTop="@dimen/margin_30dp"
                android:fontFamily="@font/merriweather"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:text="@string/app_name" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_17dp"
                android:layout_marginStart="@dimen/margin_17dp"
                android:layout_marginTop="@dimen/margin_15dp"
                >

                <TextView
                    android:id="@+id/order_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_ordered"
                    android:textColor="@color/white"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="@dimen/margin_8dp"
                    android:textSize="12sp"
                    android:clickable="true"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/margin_20dp"
                    android:layout_alignParentStart="true"
                    android:text="@string/add_orderedlist"
                    />

                <RelativeLayout
                    android:id="@+id/lyt_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_4dp"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:layout_toStartOf="@id/img_relativeLayout"
                    android:layout_marginStart="@dimen/margin_4dp"
                    android:background="?android:attr/selectableItemBackground">

                    <TextView
                        android:id="@+id/comment_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/margin_6dp"
                        android:fontFamily="@font/libre_franklin"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        tools:text="3" />

                    <ImageView
                        android:id="@+id/img_comment"
                        android:layout_width="@dimen/margin_20dp"
                        android:layout_height="@dimen/margin_20dp"
                        android:layout_toEndOf="@+id/comment_text"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_comment" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/img_relativeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_4dp"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:layout_alignParentEnd="true"
                    >

                    <ImageView
                        android:id="@+id/img_date"
                        android:layout_width="@dimen/margin_20dp"
                        android:layout_height="@dimen/margin_20dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:layout_toEndOf="@id/date_text"
                        android:src="@drawable/ic_calendar" />

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/margin_4dp"
                        android:layout_marginEnd="@dimen/margin_4dp"
                        android:fontFamily="@font/libre_franklin"
                        android:textColor="@color/black"
                        tools:text="12-02-2018" />

                </RelativeLayout>


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_margin="@dimen/margin_17dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:background="@color/colorAccent21" />

            <WebView
                android:id="@+id/web_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_17dp"
                android:layout_marginStart="@dimen/margin_17dp" />

            <TextView
                android:id="@+id/tv_related"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_17dp"
                android:layout_marginTop="@dimen/margin_6dp"
                android:padding="@dimen/margin_4dp"
                android:text="@string/related_posts"
                android:textColor="@color/blue"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvRelated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_17dp"
                android:layout_marginEnd="@dimen/margin_17dp"
                android:nestedScrollingEnabled="false"
                tools:targetApi="lollipop" />

            <LinearLayout
                android:id="@+id/lyt_third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:layout_marginEnd="@dimen/margin_10dp"
                android:layout_marginStart="@dimen/margin_10dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="1">

                <Button
                    android:id="@+id/btn_view_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_3dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/rectangle_blue"
                    android:text="@string/view_comments"
                    android:textColor="@color/white"
                    android:textSize="12sp" />


                <Button
                    android:id="@+id/btn_write_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_3dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/rectangle_blue"
                    android:text="@string/write_a_comment"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:id="@+id/activity_post_details_cartLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="2"
            >
            <TextView
                android:id="@+id/activity_post_details_cartTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/todo"
                android:gravity="center"
                android:background="@drawable/rectangle_cart"
                android:drawableBottom="@drawable/ic_shopping_cart"
                android:paddingTop="@dimen/margin_4dp"
                android:layout_margin="@dimen/margin_2dp"
                android:paddingBottom="@dimen/margin_4dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/activity_post_details_coupon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rectangle_cart"
                android:gravity="center"
                android:text="@string/coupon"
                android:layout_margin="@dimen/margin_2dp"
                android:paddingTop="@dimen/margin_4dp"
                android:textSize="16sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <include
            android:id="@+id/adsView"
            layout="@layout/content_banner_ad" />
    </LinearLayout>

    <include layout="@layout/view_common_loader" />
</RelativeLayout>